[project]
name = "eest-replay"
version = "0.0.1"
description = "Replay EEST fixtures against buildoor + a per-fixture EL"
requires-python = ">=3.11"
dependencies = [
    "ethereum-execution-testing",
    "click>=8.1",
]

[project.scripts]
eest-replay = "eest_replay.cli:main"

[tool.uv.sources]
ethereum-execution-testing = { path = "../execution-specs/packages/testing", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eest_replay"]
